feat(booking, vehicle): create dtos for create booking flow