@@ -1,9 +1,11 @@
 package apap.ti._5.vehicle_rental_2306240124_be.restservice;
 
-import apap.ti._5.vehicle_rental_2306240124_be.mapper.RentalBookingMapper;
+import apap.ti._5.vehicle_rental_2306240124_be.mapper.VehicleMapper;
 import apap.ti._5.vehicle_rental_2306240124_be.model.*;
 import apap.ti._5.vehicle_rental_2306240124_be.repository.*;
-import apap.ti._5.vehicle_rental_2306240124_be.restdto.request.rentalbooking.*;
+import apap.ti._5.vehicle_rental_2306240124_be.restdto.request.rentalbooking.RentalBookingSearchRequestDTO;
+import apap.ti._5.vehicle_rental_2306240124_be.restdto.request.rentalbooking.RentalBookingCreateRequestDTO;
+import apap.ti._5.vehicle_rental_2306240124_be.restdto.response.VehicleResponseDTO;
 import apap.ti._5.vehicle_rental_2306240124_be.restdto.response.RentalBookingResponseDTO;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -11,7 +13,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
@@ -28,231 +29,167 @@ public class RentalBookingRestServiceImpl implements RentalBookingRestService {
 
     @Override
     public List<RentalBookingResponseDTO> getAllBookings() {
-        return rentalBookingRepository.findAllByDeletedAtIsNullOrderByCreatedAtDesc()
-                .stream()
-                .map(RentalBookingMapper::toResponse)
-                .collect(Collectors.toList());
+        return rentalBookingRepository.findAll().stream()
+                .filter(b -> b.getDeletedAt() == null) // soft delete filter
+                .map(b -> RentalBookingResponseDTO.builder()
+                        .id(b.getId())
+                        .vehicleId(b.getVehicle().getId())
+                        .vehicleName(b.getVehicle().getBrand() + " " + b.getVehicle().getModel())
+                        .pickUpLocation(b.getPickUpLocation())
+                        .dropOffLocation(b.getDropOffLocation())
+                        .totalPrice(b.getTotalPrice())
+                        .status(b.getStatus())
+                        .build())
+                .toList();
     }
+
 
     @Override
     public RentalBookingResponseDTO getBookingById(String id) {
-        var booking = rentalBookingRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() ->
-                        new ResponseStatusException(HttpStatus.NOT_FOUND, "Booking not found or has been deleted"));
-        return RentalBookingMapper.toResponse(booking);
+        var booking = rentalBookingRepository.findById(id)
+                .filter(b -> b.getDeletedAt() == null)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Booking not found with id: " + id));
+
+        return RentalBookingResponseDTO.builder()
+                .id(booking.getId())
+                .vehicleId(booking.getVehicle().getId())
+                .vehicleName(booking.getVehicle().getBrand() + " " + booking.getVehicle().getModel())
+                .pickUpLocation(booking.getPickUpLocation())
+                .dropOffLocation(booking.getDropOffLocation())
+                .totalPrice(booking.getTotalPrice())
+                .status(booking.getStatus())
+                .build();
     }
 
+
+
+    @Override
+    public List<VehicleResponseDTO> searchAvailableVehicles(RentalBookingSearchRequestDTO request) {
+        // Validasi waktu
+        if (request.getPickUpTime() == null || request.getDropOffTime() == null)
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Pick-up and drop-off times are required.");
+        if (request.getDropOffTime().isBefore(request.getPickUpTime()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Drop-off time must be after pick-up time.");
+        if (request.getPickUpTime().isBefore(LocalDateTime.now()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Pick-up time cannot be in the past.");
+
+        // Filter dasar: status Available, kapasitas & transmisi cocok
+        var baseFiltered = vehicleRepository.findAll().stream()
+                .filter(v -> "Available".equalsIgnoreCase(v.getStatus()))
+                .filter(v -> v.getCapacity() >= request.getCapacityNeeded())
+                .filter(v -> v.getTransmission().equalsIgnoreCase(request.getTransmissionNeeded()))
+                .collect(Collectors.toList());
+
+        // Filter lokasi vendor (harus punya dua lokasi)
+        var filteredByLocation = baseFiltered.stream()
+                .filter(v -> {
+                    var vendor = v.getRentalVendor();
+                    if (vendor == null) return false;
+
+                    boolean hasPickup = vendor.getListOfLocations().stream()
+                            .anyMatch(l -> l.equalsIgnoreCase(request.getPickUpLocation()));
+                    boolean hasDropoff = vendor.getListOfLocations().stream()
+                            .anyMatch(l -> l.equalsIgnoreCase(request.getDropOffLocation()));
+                    return hasPickup && hasDropoff;
+                })
+                .collect(Collectors.toList());
+
+        // Filter booking overlap
+        var availableVehicles = filteredByLocation.stream()
+                .filter(vehicle -> vehicle.getBookings().stream().noneMatch(booking -> {
+                    if (booking.getDeletedAt() != null || "Done".equalsIgnoreCase(booking.getStatus())) return false;
+                    return !(request.getDropOffTime().isBefore(booking.getPickUpTime()) ||
+                             request.getPickUpTime().isAfter(booking.getDropOffTime()));
+                }))
+                .collect(Collectors.toList());
+
+        // Hitung total dan sort
+        long rentalDays = Math.max(1, ChronoUnit.DAYS.between(request.getPickUpTime(), request.getDropOffTime()));
+        double driverCost = Boolean.TRUE.equals(request.getIncludeDriver()) ? rentalDays * 100_000 : 0;
+
+        return availableVehicles.stream()
+                .sorted(Comparator.comparingDouble(v -> rentalDays * v.getPrice() + driverCost))
+                .map(VehicleMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+ 
     @Override
     public RentalBookingResponseDTO createBooking(RentalBookingCreateRequestDTO request) {
         var vehicle = vehicleRepository.findById(request.getVehicleId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Vehicle not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Vehicle not found."));
 
-        if (request.getDropOffTime().isBefore(request.getPickUpTime())) {
+        var vendor = vehicle.getRentalVendor();
+        if (vendor == null)
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Vendor information missing.");
+
+        // Validasi lokasi vendor
+        if (!vendor.getListOfLocations().contains(request.getPickUpLocation()))
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Drop-off date cannot be before pick-up date.");
-        }
-
-        if (request.getCapacityNeeded() > vehicle.getCapacity()) {
+                    "Pickup location not supported by vendor " + vendor.getName());
+        if (!vendor.getListOfLocations().contains(request.getDropOffLocation()))
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Requested capacity exceeds vehicle capacity.");
-        }
+                    "Drop-off location not supported by vendor " + vendor.getName());
 
+        // Validasi waktu
+        if (request.getPickUpTime() == null || request.getDropOffTime() == null)
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Pick-up and drop-off times are required.");
+        if (request.getDropOffTime().isBefore(request.getPickUpTime()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Drop-off time must be after pick-up time.");
+
+        // Cek overlap
+        boolean hasOverlap = rentalBookingRepository.findAll().stream()
+                .filter(b -> b.getVehicle().getId().equals(vehicle.getId()))
+                .anyMatch(b ->
+                        b.getDeletedAt() == null &&
+                        !"Done".equalsIgnoreCase(b.getStatus()) &&
+                        !(request.getDropOffTime().isBefore(b.getPickUpTime()) ||
+                          request.getPickUpTime().isAfter(b.getDropOffTime()))
+                );
+
+        if (hasOverlap)
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "Vehicle already booked in that time range.");
+
+        // Hitung total harga
         long rentalDays = Math.max(1, ChronoUnit.DAYS.between(request.getPickUpTime(), request.getDropOffTime()));
-        double totalPrice = rentalDays * vehicle.getPrice();
+        double vehicleCost = rentalDays * vehicle.getPrice();
+        double driverCost = Boolean.TRUE.equals(request.getIncludeDriver()) ? rentalDays * 100_000 : 0;
 
-        if (Boolean.TRUE.equals(request.getIncludeDriver())) {
-            totalPrice += rentalDays * 100_000;
-        }
+        double addOnCost = Optional.ofNullable(request.getAddOnIds()).orElse(List.of()).stream()
+                .map(rentalAddOnRepository::findById)
+                .filter(Optional::isPresent)
+                .mapToDouble(o -> o.get().getPrice())
+                .sum();
 
-        List<RentalAddOn> addOns = new ArrayList<>();
-        if (request.getAddOnIds() != null && !request.getAddOnIds().isEmpty()) {
-            addOns = rentalAddOnRepository.findAllById(request.getAddOnIds());
-            totalPrice += addOns.stream().mapToDouble(RentalAddOn::getPrice).sum();
-        }
+        double totalPrice = vehicleCost + driverCost + addOnCost;
 
-        long count = rentalBookingRepository.count() + 1;
-        String id = String.format("VR%06d", count);
+        // Generate ID
+        String bookingId = String.format("VR%06d", rentalBookingRepository.count() + 1);
 
-        var entity = RentalBookingMapper.fromCreateRequest(request);
-        entity.setId(id);
-        entity.setVehicle(vehicle);
-        entity.setAddOns(addOns);
-        entity.setTotalPrice(totalPrice);
-        entity.setStatus("Upcoming");
+        // Simpan booking
+        var booking = RentalBooking.builder()
+                .id(bookingId)
+                .vehicle(vehicle)
+                .pickUpLocation(request.getPickUpLocation())
+                .dropOffLocation(request.getDropOffLocation())
+                .pickUpTime(request.getPickUpTime())
+                .dropOffTime(request.getDropOffTime())
+                .includeDriver(request.getIncludeDriver())
+                .totalPrice(totalPrice)
+                .status("Upcoming")
+                .build();
 
-        rentalBookingRepository.save(entity);
-        return RentalBookingMapper.toResponse(entity);
-    }
+        var saved = rentalBookingRepository.save(booking);
 
-    @Override
-    public RentalBookingResponseDTO updateBookingDetails(String id, RentalBookingUpdateDetailsRequestDTO request) {
-        var booking = rentalBookingRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Booking not found or has been deleted"));
-
-        if (!"Upcoming".equalsIgnoreCase(booking.getStatus())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Cannot update booking details. Status must be Upcoming.");
-        }
-
-        booking.setPickUpTime(request.getPickUpTime());
-        booking.setDropOffTime(request.getDropOffTime());
-        booking.setPickUpLocation(request.getPickUpLocation());
-        booking.setDropOffLocation(request.getDropOffLocation());
-        booking.setCapacityNeeded(request.getCapacityNeeded());
-        booking.setTransmissionNeeded(request.getTransmissionNeeded());
-        booking.setIncludeDriver(request.getIncludeDriver());
-
-        long rentalDays = Math.max(1, ChronoUnit.DAYS.between(request.getPickUpTime(), request.getDropOffTime()));
-        double totalPrice = rentalDays * booking.getVehicle().getPrice();
-        if (Boolean.TRUE.equals(request.getIncludeDriver())) totalPrice += rentalDays * 100_000;
-        totalPrice += booking.getAddOns().stream().mapToDouble(RentalAddOn::getPrice).sum();
-
-        booking.setTotalPrice(totalPrice);
-        booking.setUpdatedAt(LocalDateTime.now());
-
-        rentalBookingRepository.save(booking);
-        return RentalBookingMapper.toResponse(booking);
-    }
-
-    @Override
-    public RentalBookingResponseDTO updateBookingStatus(String id, RentalBookingUpdateStatusRequestDTO request) {
-        var booking = rentalBookingRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() ->
-                        new ResponseStatusException(HttpStatus.NOT_FOUND, "Booking not found"));
-
-        String newStatus = request.getStatus();
-
-        if ("Upcoming".equalsIgnoreCase(booking.getStatus()) && "Ongoing".equalsIgnoreCase(newStatus)) {
-            if (LocalDate.now().isBefore(booking.getPickUpTime())) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                        "Cannot start booking before pick-up date.");
-            }
-            booking.setStatus("Ongoing");
-            booking.getVehicle().setStatus("In Use");
-
-        } else if ("Ongoing".equalsIgnoreCase(booking.getStatus()) && "Done".equalsIgnoreCase(newStatus)) {
-            booking.setStatus("Done");
-            booking.getVehicle().setStatus("Available");
-
-            if (LocalDate.now().isAfter(booking.getDropOffTime())) {
-                long hoursLate = ChronoUnit.HOURS.between(
-                        booking.getDropOffTime().atStartOfDay(), LocalDate.now().atStartOfDay());
-                long roundedLateHours = Math.max(1, hoursLate);
-                double penalty = 20_000 * roundedLateHours;
-                booking.setTotalPrice(booking.getTotalPrice() + penalty);
-            }
-
-        } else {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Invalid status transition.");
-        }
-
-        booking.setUpdatedAt(LocalDateTime.now());
-        rentalBookingRepository.save(booking);
-        return RentalBookingMapper.toResponse(booking);
-    }
-
-    @Override
-    public RentalBookingResponseDTO updateBookingAddOns(String id, RentalBookingUpdateAddOnsRequestDTO request) {
-        var booking = rentalBookingRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() ->
-                        new ResponseStatusException(HttpStatus.NOT_FOUND, "Booking not found"));
-
-        if (!"Upcoming".equalsIgnoreCase(booking.getStatus())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Cannot update add-ons. Status must be Upcoming.");
-        }
-
-        var addOns = rentalAddOnRepository.findAllById(request.getAddOnIds());
-        booking.setAddOns(addOns);
-
-        long rentalDays = Math.max(1, ChronoUnit.DAYS.between(booking.getPickUpTime(), booking.getDropOffTime()));
-        double totalPrice = rentalDays * booking.getVehicle().getPrice();
-        if (Boolean.TRUE.equals(booking.getIncludeDriver())) totalPrice += rentalDays * 100_000;
-        totalPrice += addOns.stream().mapToDouble(RentalAddOn::getPrice).sum();
-
-        booking.setTotalPrice(totalPrice);
-        booking.setUpdatedAt(LocalDateTime.now());
-
-        rentalBookingRepository.save(booking);
-        return RentalBookingMapper.toResponse(booking);
-    }
-
-    @Override
-    public void deleteBooking(String id) {
-        var booking = rentalBookingRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() ->
-                        new ResponseStatusException(HttpStatus.NOT_FOUND, "Booking not found"));
-
-        if (!"Upcoming".equalsIgnoreCase(booking.getStatus())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Only Upcoming bookings can be cancelled.");
-        }
-
-        boolean beforePickup = LocalDate.now().isBefore(booking.getPickUpTime());
-        if (beforePickup) booking.setTotalPrice(0.0);
-
-        booking.setStatus("Done");
-        booking.getVehicle().setStatus("Available");
-        booking.setUpdatedAt(LocalDateTime.now());
-        booking.setDeletedAt(LocalDateTime.now());
-
-        rentalBookingRepository.save(booking);
-    }
-
-    @Override
-    public List<BookingChartPointDTO> getBookingStatistics(String period, Integer year) {
-        var bookings = rentalBookingRepository.findAllByDeletedAtIsNullOrderByCreatedAtDesc()
-                .stream()
-                .filter(b -> b.getCreatedAt() != null && b.getCreatedAt().getYear() == year)
-                .toList();
-
-        if (bookings.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        List<BookingChartPointDTO> results = new ArrayList<>();
-
-        if ("monthly".equalsIgnoreCase(period)) {
-            for (int month = 1; month <= 12; month++) {
-                final int currentMonth = month;
-
-                long count = bookings.stream()
-                        .filter(b -> b.getCreatedAt().getMonthValue() == currentMonth)
-                        .count();
-
-                String monthName = java.time.Month.of(currentMonth).name();
-                monthName = monthName.substring(0, 1) + monthName.substring(1).toLowerCase();
-
-                results.add(BookingChartPointDTO.builder()
-                        .label(monthName)
-                        .total(count)
-                        .build());
-            }
-
-        } else if ("quarterly".equalsIgnoreCase(period)) {
-            for (int q = 1; q <= 4; q++) {
-                int startMonth = (q - 1) * 3 + 1;
-                int endMonth = q * 3;
-
-                long count = bookings.stream()
-                        .filter(b -> {
-                            int m = b.getCreatedAt().getMonthValue();
-                            return m >= startMonth && m <= endMonth;
-                        })
-                        .count();
-
-                results.add(BookingChartPointDTO.builder()
-                        .label("Q" + q)
-                        .total(count)
-                        .build());
-            }
-
-        } else {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                    "Invalid period. Use 'monthly' or 'quarterly'.");
-        }
-
-        return results;
+        // Response DTO
+        return RentalBookingResponseDTO.builder()
+                .id(saved.getId())
+                .vehicleId(vehicle.getId())
+                .vehicleName(vehicle.getBrand() + " " + vehicle.getModel())
+                .pickUpLocation(saved.getPickUpLocation())
+                .dropOffLocation(saved.getDropOffLocation())
+                .totalPrice(saved.getTotalPrice())
+                .status(saved.getStatus())
+                .build();
     }
 }
